# trading_agent

./: .dockerignore  .gitattributes  .gitignore  README.md  migration_acceptance_report.json  pyproject.toml  skills-lock.json
bots/crypto_trader/: Dockerfile  pyproject.toml
bots/crypto_trader/config/: default.yaml  live_config.example.json
bots/crypto_trader/config/strategies/: breakout.pre_portfolio_round3_adoption.json  momentum.pre_portfolio_round3_adoption.json
bots/crypto_trader/data/funding/: BTC.parquet  ETH.parquet  SOL.parquet
bots/crypto_trader/infra/dashboard/: Dockerfile  package-lock.json  tailwind.config.ts
bots/crypto_trader/scripts/: analyze_momentum_round2_followup.py  analyze_oos_repair.py  analyze_trend_round2_oos_second_phase.py  backfill_postgres_from_jsonl.py  check_health.sh  correct_portfolio_round3_lineage.py  funnel_analysis.py  portfolio_comparison.py  promote_portfolio_round3_extended.py  promote_revalidated_round1.py  promote_trend_round3_oos_repair.py  run_breakout_round5_phased.py  run_breakout_round6_phased.py  run_momentum_round2_alpha.py  run_momentum_round3_exit_phased.py  run_oos_repair_jsonl.ps1  run_portfolio_phase_auto_round2.py  run_revalidation_round.py  run_trend_round6_from_round5.py  run_trend_round7_from_round6.py  setup_scheduler.bat
bots/crypto_trader/src/crypto_trader/: __main__.py  cli.py
bots/crypto_trader/tests/: test_adaptive_optimization.py  test_async_postgres_sink.py  test_backtest_runner.py  test_bias.py  test_breakout_entry.py  test_breakout_exits.py  test_breakout_plugin.py  test_breakout_profile.py  test_breakout_risk.py  test_breakout_round2_alpha.py  test_breakout_round5_phased.py  test_breakout_round6_phased.py  test_breakout_setup.py  test_breakout_trail.py  test_breakout_zone_consumption.py  test_config_mutator.py  test_diagnostics.py  test_exit_efficiency_fixes.py  test_indicators.py  test_metrics_fixes.py  test_momentum_plugin.py  test_optimization_contracts.py  test_partial_fill_pnl.py  test_phase_analyzer.py  test_phase_runner.py  test_pipeline_tracker.py  test_plugin_terminal_mark_scoring.py  test_position_lifecycle.py  test_profiles.py  test_revalidation.py  test_round5_features.py  test_round_continuity.py  test_sim_broker.py  test_sizing.py  test_stops.py  test_structural_changes.py  test_trade_journal.py  test_trend_confirmation.py  test_trend_entry.py  test_trend_exits.py  (+9 more)
bots/crypto_trader/tests/instrumentation/: test_canonical_events.py  test_portfolio_rule_events.py
bots/crypto_trader/tests/live/: test_admin_cli.py  test_audit_fixes.py  test_config.py  test_entry_fill_protection.py  test_fill_routing.py  test_parity_warnings.py  test_reconciler.py  test_state.py
bots/crypto_trader/tests/parity/: known_differences.json  test_known_differences_manifest.py  test_shadow_replay.py  test_terminal_accounting_characterization.py  test_trade_outcome_accounting.py
bots/crypto_trader/tests/portfolio/: test_backtest_runner.py  test_state.py  test_sweep.py
bots/ibkr_trading/: Dockerfile  pyproject.toml
bots/ibkr_trading/apps/dashboard/: .dockerignore  Dockerfile
bots/ibkr_trading/apps/relay/: app.py  auth.py  rate_limiter.py  start.sh
bots/ibkr_trading/apps/runtime/: __init__.py  cli.py  runtime.py
bots/ibkr_trading/apps/watchdog/: alerts.py  main.py
bots/ibkr_trading/backtests/momentum/: __main__.py  config_portfolio.py  config_vdubus.py  sweep_portfolio.py
bots/ibkr_trading/backtests/regime/: __main__.py  (+2 more)
bots/ibkr_trading/config/: contracts.yaml  strategies.yaml  watchdog.yaml
bots/ibkr_trading/libs/: __init__.py
bots/ibkr_trading/regime/: __init__.py  config.py  engine.py  hmm.py  inference.py  persistence.py  portfolio.py  scanner.py  seed_manifest.py  stress.py
bots/ibkr_trading/scripts/: verify_backtest_baseline_regeneration.py
bots/ibkr_trading/tests/: README.md  conftest.py
trading/k_stock_trader/: Dockerfile  pyproject.toml
trading/k_stock_trader/backtests/: config.py
trading/k_stock_trader/config/: conservative.yaml  oms_config.yaml  pcim.yaml  universe_103.yaml
trading/k_stock_trader/instrumentation/: facade.py
trading/k_stock_trader/kis_core/: bar_aggregator.py  kis_client.py  kis_decorators.py  kis_responses.py
trading/k_stock_trader/oms/: arbitration.py  config_loader.py  persistence.py  risk.py  state.py  stop_watcher.py
trading/k_stock_trader/oms_client/: __init__.py
trading/k_stock_trader/schemas/: events.py
trading/k_stock_trader/scripts/: check_live_readiness_manifest.py  export_lrs_to_parquet.py  generate_olr_kalcb_artifacts.py  health_check.sh  kalcb_holdout_round5_mutation_eval.py  kalcb_hot_market_root_cause.py  kalcb_interaction_route_conversion_optimizer.py  kalcb_original_champion_route_conversion.py  kalcb_path_quality_sweep.py  kalcb_positive_r_pipeline_breakdown.py  kalcb_q3_incremental_guard_search.py  kalcb_round3_oos_ablation.py  kalcb_round4_redesigned_phase_probe.py  kalcb_round5_all_candidate_baseline_audit.py  kalcb_round5_structural_rerun.py  kalcb_train_alpha_capture_optimizer.py  olr_nonmonotone_score_band_search.py  olr_reject500_filter_analysis.py  olr_round2_oos_deep_ablation.py  olr_sector_data_alpha_sweep.py  promote_olr_round3_reject_score_min300.py  promote_olr_round4_score_band_rule.py  promote_olr_round4_soft_combo.py  promote_olr_round5_dynamic_sector.py  refresh_olr_round5_final_artifacts.py  replay_paper_session.py  rewrite_olr_round3_diagnostics_text.py  run_olr_kalcb_runtime_session.py  strategy_healthcheck.sh  summarize_paper_parity.py  update_krx_daily.py
trading/k_stock_trader/strategy_common/: events.py  lrs.py  market.py  sector_daily.py  sector_map.py
trading/k_stock_trader/strategy_kalcb/: artifact_store.py  data.py  engine.py  execution.py  first30.py  research_generator.py
trading/k_stock_trader/strategy_olr/: __init__.py  artifact_store.py  config.py  engine.py  models.py  research_generator.py  risk.py
trading/k_stock_trader/strategy_pcim/: Dockerfile  __init__.py  guards.py
trading/k_stock_trader/tests/: test_audit_remediation.py  test_backfill_lrs.py  test_strategy_common_lrs.py
(+3005 files in other folders)
