[project]
name = "trading-agent-workspace"
version = "0.1.0"
description = "Contract-first Python workspace monorepo for IBKR, K-stock, crypto, and assistant trading systems."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.9",
]

[tool.uv.workspace]
members = ["packages/*", "bots/*"]
exclude = ["_references/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.trading_agent.bootstrap]
ci_provider = "github-actions"
default_branch = "main"
live_image_python = "3.12"
package_compatibility_python = "3.11 where retained by existing package metadata"
artifact_policy = "docs/repo-bootstrap-decisions.md"
branch_protection_required = true
branch_protection_required_checks = [
  "repo-bootstrap",
  "workspace-lock",
  "workspace-imports",
  "contracts",
  "baselines",
  "live-configs",
  "affected-images",
  "docker",
]
