[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-trading"
version = "0.1.0"
description = "IBKR trading bot package extracted from the legacy trading runtime."
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.9",
  "asyncpg>=0.31",
  "ib_async>=2.1",
  "numpy>=1.26",
  "pandas>=2.3",
  "pydantic>=2.12",
  "pytz>=2024.1",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
relay = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]
research = [
  "matplotlib>=3.10",
  "pyarrow>=15.0",
  "pytz>=2024.1",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
regime = [
  "hmmlearn>=0.3",
  "scikit-learn>=1.3",
  "fredapi>=0.5",
]

[project.scripts]
ibkr-trading-runtime = "ibkr_trading.runtime:main"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["apps*", "libs*", "strategies*", "regime*", "instrumentation*", "ibkr_trading*"]
exclude = ["backtests*", "research*", "tests*", "*.tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
asyncio_mode = "auto"
norecursedirs = ["venv", ".venv", "node_modules", "research", "backtests", ".git"]
markers = [
  "parity_smoke: deterministic live/backtest parity checks that should run on every push",
  "parity_nightly: deeper live-shadow and family-level parity checks",
  "parity_calibration: calibration checks comparing deterministic fills to observed broker fills",
]
