[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k-stock-trader"
version = "0.1.0"
description = "KIS/KRX K-stock trading bot package extracted from the legacy runtime."
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.9.0",
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.12",
  "fastapi>=0.100.0",
  "feedparser>=6.0.0",
  "google-genai>=0.5.0",
  "loguru>=0.7.0",
  "pandas>=2.0.0",
  "pyarrow>=15.0.0",
  "pydantic>=2.0.0",
  "pykrx>=1.0.0",
  "pytz>=2024.1",
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "rich>=13.0.0",
  "uvicorn>=0.23.0",
  "websockets>=11.0",
  "yt-dlp>=2024.1.0",
  "trading-contracts>=0.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
k-stock-runtime-session = "k_stock_trader.runtime_session:main"
k-stock-olr-kalcb-runtime = "k_stock_trader.olr_kalcb_runtime:main"
k-stock-instrumentation-sidecar = "k_stock_trader.instrumentation_sidecar:main"

[tool.setuptools.packages.find]
where = [".", "src"]
include = [
  "deployment*",
  "instrumentation*",
  "kis_core*",
  "k_stock_trader*",
  "oms*",
  "oms_client*",
  "strategy_common*",
  "strategy_kalcb*",
  "strategy_olr*",
  "strategy_pcim*",
  "schemas*",
]
exclude = ["backtests*", "tests*", "*.tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
filterwarnings = [
  "ignore:path is deprecated\\. Use files\\(\\) instead\\..*:DeprecationWarning:pykrx",
]
